# swagger.json
@@ -527,14 +527,19 @@
         },
         "responses": {
           "200": {
-            "description": "Water consumption rate updated successfully.",
+            "description": "Water consumption rate updated successfully. Returns the new water rate.",
             "content": {
               "application/json": {
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "updatedUser": {
-                      "$ref": "#/components/schemas/WaterRateResponse"
+                    "message": {
+                      "type": "string",
+                      "example": "New water rate"
+                    },
+                    "waterRate": {
+                      "type": "number",
+                      "example": 2
                     }
                   }
                 }
@@ -542,13 +547,16 @@
             }
           },
           "400": {
-            "description": "Invalid water rate provided; the rate must be between 1 and 15 liters."
-          },
-          "404": {
-            "description": "User not found or not available."
+            "description": "Bad request. Provided water rate is out of the acceptable range (less than 1ml or more than 15l)."
           },
           "401": {
             "description": "Unauthorized. The user is not logged in or the token is invalid."
+          },
+          "404": {
+            "description": "Not found. No user found with the provided ID."
+          },
+          "500": {
+            "description": "Internal Server Error. An error occurred while processing the request."
           }
         }
       }
